# T3GUI

./: .gitignore  issues.txt
EggDialog/: CMakeLists.txt
EggDialog/cmake/: FileList.cmake  FindAllegro5.cmake  FindAllegro5AudioCodec.cmake  FindAllegro5Dialog.cmake
EggDialog/src/: egg_dialog.c  hello_dialog.c
t3gui/: egg_dialog  egg_dialog.c  egg_dialog_proc.c  element_proc.c  nine_patch.c  player.c  player.h  t3gui.c  t3gui.h  theme.c  unicode.c  unicode.h
t3gui/EggDialog/: LICENCE  egg_dialog.txt
t3gui/EggDialog/cmake/: FindAllegro5Audio.cmake  FindAllegro5Font.cmake  FindAllegro5Image.cmake  FindAllegro5Main.cmake  FindAllegro5Primitives.cmake  FindAllegro5TTF.cmake
t3gui/EggDialog/include/egg_dialog/: egg_dialog.h  nine_patch.h
t3gui/EggDialog/src/: dialog_test.c  egg_dialog.c  egg_dialog_proc.c  nine_patch.c
